# blog_backend

./: .env  .gitignore  Cargo.toml  default.nix
api/: Cargo.toml
api/src/: cookie.rs  lib.rs
api/src/serialization_struct/: article.rs  comment.rs  role.rs  tags.rs  user.rs
core/: Cargo.toml
core/src/: mutation.rs  query.rs
entity/: Cargo.toml
entity/src/: article.rs  comment.rs  lib.rs  prelude.rs  role.rs  roles_users.rs  session.rs  tag.rs  tags_articles.rs  user.rs  users_roles.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221211_000001_create_user_table.rs  m20221212_000002_create_role_table.rs  m20221213_000003_add_roles_table.rs  m20221213_000004_add_article_table.rs  m20221213_000005_add_tag_table.rs  m20221213_000006_add_comment_table.rs  m20221213_000007_add_session_table.rs  m20221213_000008_add_creation_and_edition_row_into_article_table.rs  m20221216_000009_add_picture_url_column_into_article_table.rs  m20221216_000010_set_unique_field_into_article_table.rs  m20221216_000011_set_unique_field_into_user_table.rs
src/: main.rs
