[package]
name = "blog-backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blog-backend-core = { path = "../core" }
tokio = { version = "1.23", features = ["full"]}
axum = "0.6"
anyhow = "1.0.66"
sea-orm = { version = "0.10", features = [ "sqlx-mysql", "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
entity = { path = "../entity" }
migration = { path = "../migration" }
